--- a/resume/dashboard/templates/dashboard/index.html
+++ b/resume/dashboard/templates/dashboard/index.html
@@ -71,11 +71,7 @@
 		<!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
-
-		
-		
-		
-		<!--header start-->
+        <!--header start-->
 		<section class="header">
 			<div class="container">	
 				<div class="header-left">
@@ -197,8 +193,6 @@
 								<li><a href="about.html">About</a></li>
 								<li><a href="service.html">Service</a></li>
 								<li><a href="project.html">Project</a></li>
-								<li><a href="team.html">Team</a></li>
-								<li><a href="blog.html">Blog</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li>
 									<a href="#">
@@ -302,7 +296,7 @@
 			<div class="container">
 				<div class="we-do-details">
 					<div class="section-header text-center">
-						<h2>what we do</h2>
+						<h2>Education</h2>
 						<p>
 							Pallamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
 						</p>
@@ -395,7 +389,7 @@
 						<div class="col-sm-6">
 							<div class="single-about-us">
 								<div class="about-us-txt">
-									<h2>about us</h2>
+									<h2>Profil</h2>
 									<p>
 										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.
 									</p>
@@ -425,7 +419,7 @@
 				<div class="container">
 					<div class="service-details">
 						<div class="section-header text-center">
-							<h2>our services</h2>
+							<h2>Skills</h2>
 							<p>
 								Pallamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
 							</p>
@@ -551,67 +545,12 @@
 
 		</section><!--/.service-->
 		<!--service end-->
-
-		<!--statistics start-->
-		<section  class="statistics">
-			<div class="container">
-				<div class="statistics-counter "> 
-					<div class="col-md-3 col-sm-6">
-						<div class="single-ststistics-box">
-							<div class="statistics-img">
-								<img src="assets/images/counter/counter1.png" alt="counter-icon" />
-							</div><!--/.statistics-img-->
-							<div class="statistics-content">
-								<div class="counter">2556</div>
-								<h3>days worked</h3>
-							</div><!--/.statistics-content-->
-						</div><!--/.single-ststistics-box-->
-					</div><!--/.col-->
-					<div class="col-md-3 col-sm-6">
-						<div class="single-ststistics-box">
-							<div class="statistics-img">
-								<img src="assets/images/counter/counter2.png" alt="counter-icon" />
-							</div><!--/.statistics-img-->
-							<div class="statistics-content">
-								<div class="counter">326</div>
-								<h3>project finished</h3>
-							</div><!--/.statistics-content-->
-						</div><!--/.single-ststistics-box-->
-					</div><!--/.col-->
-					<div class="col-md-3 col-sm-6">
-						<div class="single-ststistics-box">
-							<div class="statistics-img">
-								<img src="assets/images/counter/counter3.png" alt="counter-icon" />
-							</div><!--/.statistics-img-->
-							<div class="statistics-content">
-								<div class="counter">1526</div>
-								<h3>coffee cup</h3>
-							</div><!--/.statistics-content-->
-						</div><!--/.single-ststistics-box-->
-					</div><!--/.col-->
-					<div class="col-md-3 col-sm-6">
-						<div class="single-ststistics-box">
-							<div class="statistics-img">
-								<img src="assets/images/counter/counter4.png" alt="counter-icon" />
-							</div><!--/.statistics-img-->
-							<div class="statistics-content">
-								<div class="counter">856</div>
-								<h3>client satisfied</h3>
-							</div><!--/.statistics-content-->
-						</div><!--/.single-ststistics-box-->
-					</div><!--/.col-->
-				</div><!--/.statistics-counter-->	
-			</div><!--/.container-->
-
-		</section><!--/.statistics-->
-		<!--statistics end-->
-
-		<!--project start-->
+        <!--project start-->
 		<section id="project"  class="project">
 			<div class="container">
 				<div class="project-details">
 					<div class="project-header text-left">
-						<h2>Our Finished Projects</h2>
+						<h2> Projects</h2>
 						<p>
 							Pallamco laboris nisi ut aliquip ex ea commodo consequat. 
 						</p>
@@ -728,420 +667,7 @@
 
 		</section><!--/.project-->
 		<!--project end-->
-
-
-		<!--team start -->
-		<section  class="team">
-			<div class="container">
-				<div class="team-details">
-					<div class="project-header team-header text-left">
-						<h2>Our expert team</h2>
-						<p>
-							Pallamco laboris nisi ut aliquip ex ea commodo consequat. 
-						</p>
-					</div><!--/.project-header-->
-					<div class="team-card">
-						<div class="container">
-							<div class="row">
-								<div class="owl-carousel  team-carousel">
-									<div class="col-sm-3 col-xs-12">
-										<div class="single-team-box team-box-bg-1">
-											<div class="team-box-inner">
-												<h3>tom hanks</h3>
-												<p class="team-meta">Founder &  CEO</p>
-												<a href="team.html" class="learn-btn">
-													learn more
-												</a>
-											</div><!--/.team-box-inner-->
-
-										</div><!--/.single-team-box-->
-									</div><!--.col-->
-									<div class="col-sm-3 col-xs-12">
-										<div class="single-team-box team-box-bg-2">
-											<div class="team-box-inner">
-												<h3>alex browne</h3>
-												<p class="team-meta">
-													Director, Management & Research
-												</p>
-												<a href="team.html" class="learn-btn">
-													learn more
-												</a>
-											</div><!--/.team-box-inner-->
-										</div><!--/.single-team-box-->
-									</div><!--.col-->
-									<div class="col-sm-3 col-xs-12">
-										<div class="single-team-box team-box-bg-3">
-											<div class="team-box-inner">
-												<h3>darren j. stevens</h3>
-												<p class="team-meta">
-													Director, Finance Solution
-												</p>
-												<a href="team.html" class="learn-btn">
-													learn more
-												</a>
-											</div><!--/.team-box-inner-->
-										</div><!--/.single-team-box-->
-									</div><!--.col-->
-									<div class="col-sm-3 col-xs-12">
-										<div class="single-team-box team-box-bg-4">
-											<div class="team-box-inner">
-												<h3>kevin thomson</h3>
-												<p class="team-meta">
-													Head, Legal Advising
-												</p>
-												<a href="team.html" class="learn-btn">
-													learn more
-												</a>
-											</div><!--/.team-box-inner-->
-										</div><!--/.single-team-box-->
-									</div><!--.col-->
-								</div><!--/.team-carousel-->
-							</div><!--/.row-->
-						</div><!--/.container-->
-					</div><!--/.team-card-->
-				</div><!--/.team-details-->
-			</div><!--/.container-->
-
-		</section><!--/.team-->
-		<!--team end-->
-	
-		<!--pricing start -->
-		<section id="pricing" class="pricing">
-			<div class="container">
-				<div class="pricing-details">
-					<div class="section-header text-center">
-						<h2 class="price-head">our pricing table</h2>
-						<p>
-							Pallamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-						</p>
-					</div><!--/.section-header-->
-					<div class="pricing-content">
-						<div class="row">
-							<div class="col-md-3 col-sm-6">
-								<div class="pricing-box">
-									<div class="pricing-header">
-										<h2>basic</h2>
-										<h3 class="packeg_p"><span>$</span>99</h3>
-										<p>monthly</p>
-									</div><!--/.pricing-header-->
-									<ul class="plan-lists">
-										<li>01 user</li>
-										<li>01 project</li>
-										<li>01 advisor team</li>
-										<li>complete statistics</li>
-										<li>E-Mail support</li>
-									</ul><!--/ul-->
-									
-									<div class="project-btn pricing-btn text-center">
-										<a href="project.html"  class="project-view">
-											Sign Up Now
-										</a>
-									</div><!--/.project-btn-->
-								</div><!--/.pricing-box-->
-							</div><!--/.col-->
-
-							<div class="col-md-3 col-sm-6">
-								<div class="pricing-box">
-									<div class="pricing-header">
-										<h2>standard</h2>
-										<h3 class="packeg_p"><span>$</span>299</h3>
-										<p>monthly</p>
-									</div><!--/.pricing-header-->
-									<ul class="plan-lists">
-										<li>05 user</li>
-										<li>05 project</li>
-										<li>05 advisor team</li>
-										<li>complete statistics</li>
-										<li>full support</li>
-									</ul><!--/ul-->
-									
-									<div class="project-btn pricing-btn text-center">
-										<a href="project.html"  class="project-view">
-											Sign Up Now
-										</a>
-									</div><!--/.project-btn-->
-								</div><!--/.pricing-box-->
-							</div><!--/.col-->
-
-							<div class="col-md-3 col-sm-6">
-								<div class="pricing-box">
-									<div class="pricing-header">
-										<h2>advanced</h2>
-										<h3 class="packeg_p"><span>$</span>499</h3>
-										<p>monthly</p>
-									</div><!--/.pricing-header-->
-									<ul class="plan-lists">
-										<li>10 user</li>
-										<li>10 project</li>
-										<li>10 advisor team</li>
-										<li>complete statistics</li>
-										<li>full support</li>
-									</ul><!--/ul-->
-									
-									<div class="project-btn pricing-btn text-center">
-										<a href="project.html"  class="project-view">
-											Sign Up Now
-										</a>
-									</div><!--/.project-btn-->
-								</div><!--/.pricing-box-->
-							</div><!--/.col-->
-
-							<div class="col-md-3 col-sm-6">
-								<div class="pricing-box">
-									<div class="pricing-header">
-										<h2>unlimited</h2>
-										<h3 class="packeg_p"><span>$</span>1099</h3>
-										<p>monthly</p>
-									</div><!--/.pricing-header-->
-									<ul class="plan-lists">
-										<li>unlimited user</li>
-										<li>unlimited project</li>
-										<li>unlimited advisor team</li>
-										<li>complete statistics</li>
-										<li>full support</li>
-									</ul><!--/ul-->
-									
-									<div class="project-btn pricing-btn text-center">
-										<a href="project.html"  class="project-view">
-											Sign Up Now
-										</a>
-									</div><!--/.project-btn-->
-								</div><!--/.pricing-box-->
-							</div><!--/.col-->
-
-						</div><!--/.row-->
-					</div><!--/.pricing-content-->
-				</div><!--/.pricing-details-->
-			</div><!--/.container-->
-
-		</section><!--/.pricing-->
-		<!--pricing end-->
-
-
-		<!-- testemonial Start -->
-		<section   class="testemonial">
-			<div class="container">
-				<div class="section-header text-center">
-					<h2>
-						<span>
-							what our client say about us
-						</span>
-					</h2>
-				</div><!--/.section-header-->
-				<div class="owl-carousel owl-theme" id="testemonial-carousel">
-					<div class="home1-testm item">
-						<div class="home1-testm-single text-center">
-							<div class="home1-testm-img">
-								<img src="assets/images/client/testimonial1.jpg" alt="img"/>
-							</div><!--/.home1-testm-img-->
-							<div class="home1-testm-txt">
-								<span class="icon section-icon">
-									<i class="fa fa-quote-left" aria-hidden="true"></i>
-								</span>
-								<p>
-									Lorem ipsum dolor sit amet conse adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam..
-								</p>
-								<h3>
-									<a href="#">
-										kevin watson
-									</a>
-								</h3>
-								<h4>CEO, Kingston</h4>
-							</div><!--/.home1-testm-txt-->	
-						</div><!--/.home1-testm-single-->
-					</div><!--/.item-->
-					<div class="home1-testm item">
-						<div class="home1-testm-single text-center">
-							<div class="home1-testm-img">
-								<img src="assets/images/client/testimonial2.jpg" alt="img"/>
-							</div><!--/.home1-testm-img-->
-							<div class="home1-testm-txt">
-								<span class="icon section-icon">
-									<i class="fa fa-quote-left" aria-hidden="true"></i>
-								</span>
-								<p>
-									Lorem ipsum dolor sit amet conse adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam..
-								</p>
-								<h3>
-									<a href="#">
-										kevin watson
-									</a>
-								</h3>
-								<h4>CEO, Kingston</h4>
-							</div><!--/.home1-testm-txt-->	
-						</div><!--/.home1-testm-single-->
-					</div><!--/.item-->
-					<div class="home1-testm item">
-						<div class="home1-testm-single text-center">
-							<div class="home1-testm-img">
-								<img src="assets/images/client/testimonial1.jpg" alt="img"/>
-							</div><!--/.home1-testm-img-->
-							<div class="home1-testm-txt">
-								<span class="icon section-icon">
-									<i class="fa fa-quote-left" aria-hidden="true"></i>
-								</span>
-								<p>
-									Lorem ipsum dolor sit amet conse adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam..
-								</p>
-								<h3>
-									<a href="#">
-										kevin watson
-									</a>
-								</h3>
-								<h4>CEO, Kingston</h4>
-							</div><!--/.home1-testm-txt-->	
-						</div><!--/.home1-testm-single-->
-					</div><!--/.item-->
-				</div><!--/.testemonial-carousel-->
-			</div><!--/.container-->
-
-		</section><!--/.testimonial-->	
-		<!-- testemonial End -->
-
-		<!--clients start-->
-		<section class="clients">
-			<div class="container">
-				<div class="clients-area">
-					<div class="owl-carousel owl-theme" id="client">
-						<div class="item">
-							<a href="#">
-								<img src="assets/images/client/client1.png" alt="brand-image" />
-							</a>
-						</div><!--/.item-->
-						<div class="item">
-							<a href="#">
-								<img src="assets/images/client/client2.png" alt="brand-image" />
-							</a>
-						</div><!--/.item-->
-						<div class="item">
-							<a href="#">
-								<img src="assets/images/client/client3.png" alt="brand-image" />
-							</a>
-						</div><!--/.item-->
-						<div class="item">
-							<a href="#">
-								<img src="assets/images/client/client4.png" alt="brand-image" />
-							</a>
-						</div><!--/.item-->
-						<div class="item">
-							<a href="#">
-								<img src="assets/images/client/client5.png" alt="brand-image" />
-							</a>
-						</div><!--/.item-->
-					</div><!--/.owl-carousel-->
-				</div><!--/.clients-area-->
-			</div><!--/.container-->
-
-		</section><!--/.clients-->
-		<!--clients end-->
-
-		<!--nwes start -->
-		<section  class="news">
-			<div class="container">
-				<div class="news-details">
-					<div class="section-header text-center">
-						<h2>our latest news</h2>
-						<p>
-							Pallamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-						</p>
-					</div><!--/.section-header-->
-					<div class="news-card news-card-pb-25">
-							<div class="row">
-								<div class="col-md-4 col-sm-6">
-									<div class="single-news-box">
-										<div class="news-box-bg">
-											<img src="assets/images/blog/bl1.jpg" alt="blog image">
-											<div class="isotope-overlay">
-												<a href="blog_single.html">
-													<span class="lnr lnr-link"></span>
-													
-												</a>
-											</div>
-
-										</div><!--/.team-box-bg-->
-										<div class="news-box-inner">
-											<h3>
-												<a href="blog_single.html">
-													The Pros and Cons of Starting an Online Consulting Business
-												</a>
-											</h3>
-											<p class="news-meta">
-												Posted By:  <span>Mick Steven</span>  //  On <span>12th June, 2017</span>
-											</p>
-											<!-- <a href="#" class="learn-btn">
-												learn more
-											</a> -->
-										</div><!--/.news-box-inner-->
-									</div><!--/.single-news-box-->
-								</div><!--.col-->
-								<div class="col-md-4 col-sm-6">
-									<div class="single-news-box">
-										<div class="news-box-bg">
-											<img src="assets/images/blog/bl2.jpg" alt="blog image">
-											<div class="isotope-overlay">
-												<a href="blog_single.html">
-													<span class="lnr lnr-link"></span>
-													
-												</a>
-											</div>
-
-										</div><!--/.team-box-bg-->
-										<div class="news-box-inner">
-											<h3>
-												<a href="blog_single.html">
-													8 Secrets for Your successful Business Mentor Won't Tell You
-												</a>
-											</h3>
-											<p class="news-meta">
-												Posted By:  <span>Mick Steven</span>  //  On <span>12th June, 2017</span>
-											</p>
-											<!-- <a href="#" class="learn-btn">
-												learn more
-											</a> -->
-										</div><!--/.news-box-inner-->
-									</div><!--/.single-news-box-->
-								</div><!--.col-->
-								<div class="col-md-4 col-sm-6">
-									<div class="single-news-box">
-										<div class="news-box-bg">
-											<img src="assets/images/blog/bl3.jpg" alt="blog image">
-											<div class="isotope-overlay">
-												<a href="blog_single.html">
-													<span class="lnr lnr-link"></span>
-													
-												</a>
-											</div>
-
-										</div><!--/.team-box-bg-->
-										<div class="news-box-inner">
-											<h3>
-												<a href="blog_single.html">
-													Hire a Branding Consultant With a Similar Aesthetic to Your Own
-												</a>
-											</h3>
-											<p class="news-meta">
-												Posted By:  <span>Mick Steven</span>  //  On <span>12th June, 2017</span>
-											</p>
-											<!-- <a href="#" class="learn-btn">
-												learn more
-											</a> -->
-										</div><!--/.news-box-inner-->
-									</div><!--/.single-news-box-->
-								</div><!--.col-->
-							</div><!--/.row-->
-							<div class="project-btn text-center">
-								<a href="blog.html"  class="project-view">read more
-								</a>
-							</div><!--/.project-btn-->
-					</div><!--/.news-card-->
-					
-				</div><!--/news-details-->
-			</div><!--/.container-->
-
-		</section><!--/news-->
-		<!--news end-->
-
-		<!--contact start-->
+        <!--contact start-->
 		<section  class="contact">
 			<div class="container">
 				<div class="contact-details">
@@ -1243,34 +769,7 @@
 			</div><!--/.container-->
 
 		</section><!--/.contact-->
-
-		<!-- new-project start -->
-		<section  id="new-project" class="new-project">
-				<div class="container">
-					<div class="new-project-details">
-						<div class="row">
-							<div class="col-md-10 col-sm-8">
-								<div class="single-new-project">
-									<h3>
-										Want to start a new project with us? Let’s Start!
-									</h3>
-								</div><!-- /.single-new-project-->	
-							</div><!-- /.col-->	
-							<div class="col-md-2 col-sm-4">
-								<div class="single-new-project">
-									<a href="#" class="slide-btn">
-										start now
-									</a>
-								</div><!-- /.single-new-project-->	
-							</div><!-- /.col-->	
-						</div><!-- /.row-->	
-					</div><!-- /.new-project-details-->	
-				</div><!-- /.container-->	
-
-		</section><!-- /.new-project-->	
-		<!-- new-project end -->
-		
-		<!--hm-footer start-->
+        <!--hm-footer start-->
 		<section class="hm-footer">
 			<div class="container">
 				<div class="hm-footer-details">
