my website resume v1

--- a/resume/dashboard/templates/dashboard/base.html
+++ b/resume/dashboard/templates/dashboard/base.html
@@ -73,15 +73,15 @@
             <div class="header-left">
                 <ul class="pull-left">
                     <li>
-                        <a href="#">
-                            <i class="fa fa-phone" aria-hidden="true"></i> +213542835629
-                        </a>
+
+                        <i class="fa fa-phone" aria-hidden="true"></i> +213542835629
+
                     </li>
                     <!--/li-->
                     <li>
-                        <a href="#">
-                            <i class="fa fa-envelope" aria-hidden="true"></i>friha.yasser@pm.me
-                        </a>
+
+                        <i class="fa fa-envelope" aria-hidden="true"></i>friha.yasser@pm.me
+
                     </li>
                     <!--/li-->
                 </ul>
@@ -94,7 +94,8 @@
                         <div class="social-icon">
                             <ul>
                                 <li><a href="https://github.com/yasser31"><i class="fa fa-github"></i></a></li>
-                                <li><a href="https://www.linkedin.com/in/yasser-friha"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/yasser-friha"><i
+                                            class="fa fa-linkedin"></i></a></li>
                                 <li><a href="https://twitter.com/Yasser_Friha"><i class="fa fa-twitter"></i></a></li>
                             </ul>
                             <!--/.ul -->
@@ -128,8 +129,9 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html">
-                            <img src="{% static 'dashboard/images/logo/Tailor Brands - Instant Logo Maker & Online Logo Design_files' %}" alt="logo">
+                        <a class="navbar-brand" href="">
+                            <img src="{% static 'dashboard/images/logo/logo.png' %}"
+                                alt="logo">
                         </a>
                     </div>
                     <!--/.navbar-header -->
