--- a/resume/dashboard/templates/dashboard/contact.html
+++ b/resume/dashboard/templates/dashboard/contact.html
@@ -5,8 +5,11 @@
 			<div class="section-header contact-head  text-center">
 				<h2>contact us</h2>
 				<p>
-					Pallamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-					voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					I would welcome the opportunity to further discuss the
+					details of my experience and attributes which I believe will be an asset to your team.
+					Please use this form to contact me for additional insight into my background.
+					<br>
+					Thank you for your time.
 				</p>
 			</div>
 			<!--/.section-header-->
@@ -41,16 +44,14 @@
 										<h3>social partner</h3>
 										<div class="contact-icon">
 											<ul>
-												<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+												<li><a href="https://github.com/yasser31"><i class="fa fa-github" aria-hidden="true"></i></a>
 												</li>
 												<!--/li-->
-												<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+												<!--/li-->
+												<li><a href="https://www.linkedin.com/in/yasser-friha"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
 												</li>
 												<!--/li-->
-												<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-												</li>
-												<!--/li-->
-												<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+												<li><a href="https://twitter.com/Yasser_Friha"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 												</li>
 												<!--/li-->
 											</ul>
