--- a/resume/dashboard/templates/dashboard/index.html
+++ b/resume/dashboard/templates/dashboard/index.html
@@ -24,7 +24,7 @@
 								<div class="single-slide-item-content">
 									<h2>Welcome <br> To my website resume</h2>
 									<p>
-										Here you can find all informations about my education, profil, prjects and
+										Here you can find all informations about my education, profil, projects and
 										motivation .
 									</p>
 								</div><!-- /.single-slide-item-content-->
@@ -43,7 +43,7 @@
 										<br>Welcome <br> To my website resume
 									</h2>
 									<p>
-										Here you can find all informations about my education, profil, prjects and
+										Here you can find all informations about my education, profil, projects and
 										motivation.
 									</p>
 								</div><!-- /.single-slide-item-content-->
@@ -74,6 +74,13 @@
 			<div class="section-header text-center">
 				<h2>Education</h2>
 				<p>
+					Throughout my web development training journey, I applied a strong focus on building my algorithm
+					implementation, testing, and maintenance abilities.
+					<br>
+					My academic strengths have greatly contributed to the development of my critical
+					thinking, observation, and problem-solving skills. I bring clear and effective
+					communication to build professional connections
+					with co-workers and management.
 				</p>
 			</div>
 			<!--/.section-header-->
@@ -169,10 +176,11 @@
 						<div class="about-us-txt">
 							<h2>Profil</h2>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-								incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-								exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-								dolor in reprehenderit in voluptate velit esse.
+								I am detail-oriented and meticulous when managing competing
+								priorities within tight deadlines. I work best in roles where utilizing designing
+								software applications allows me to make a positive impact while using creative
+								problem-solving to resolve issues and achieve goals.
+
 							</p>
 						</div>
 						<!--/.about-us-txt-->
@@ -224,12 +232,9 @@
 									<a href="#">Python</a>
 								</h2>
 								<p>
-									Lorem ipsum dolo dolor in in voluptate velit esse cillum dolore. epteur sint oat
-									cupidatat
+									
 								</p>
-								<a href="#" class="service-btn">
-									learn more
-								</a>
+						
 							</div>
 							<!--/.service-txt-->
 						</div>
@@ -247,12 +252,9 @@
 									<a href="#">Django</a>
 								</h2>
 								<p>
-									Lorem ipsum dolo dolor in in voluptate velit esse cillum dolore. epteur sint oat
-									cupidatat
+									
 								</p>
-								<a href="#" class="service-btn">
-									learn more
-								</a>
+								
 							</div>
 							<!--/.service-txt-->
 						</div>
@@ -276,12 +278,9 @@
 									<a href="#">Javascript</a>
 								</h2>
 								<p>
-									Lorem ipsum dolo dolor in in voluptate velit esse cillum dolore. epteur sint oat
-									cupidatat
+									
 								</p>
-								<a href="#" class="service-btn">
-									learn more
-								</a>
+								
 							</div>
 							<!--/.service-txt-->
 						</div>
@@ -299,12 +298,9 @@
 									<a href="#">Flask</a>
 								</h2>
 								<p>
-									Lorem ipsum dolo dolor in in voluptate velit esse cillum dolore. epteur sint oat
-									cupidatat
+									
 								</p>
-								<a href="#" class="service-btn">
-									learn more
-								</a>
+								
 							</div>
 							<!--/.service-txt-->
 						</div>
@@ -322,12 +318,9 @@
 									<a href="#">SQL</a>
 								</h2>
 								<p>
-									Lorem ipsum dolo dolor in in voluptate velit esse cillum dolore. epteur sint oat
-									cupidatat
+									
 								</p>
-								<a href="#" class="service-btn">
-									learn more
-								</a>
+								
 							</div>
 							<!--/.service-txt-->
 						</div>
@@ -479,39 +472,6 @@
 	<div class="container">
 		<div class="hm-footer-details">
 			<div class="row">
-				<div class="col-md-4 col-sm-6 col-xs-12">
-					<div class="hm-footer-widget">
-						<div class="hm-foot-title ">
-							<div class="logo">
-								<a href="index.html">
-									<img src="assets/images/logo/logo.png" alt="logo" />
-								</a>
-							</div><!-- /.logo-->
-						</div>
-						<!--/.hm-foot-title-->
-						<div class="hm-foot-para">
-							<p>
-								Lorem ipsum dolor sit amt conetur adcing elit. Sed do eiusod tempor utslr. Ut laboris
-								nisi ut aute irure dolor in rein velit esse.
-							</p>
-						</div>
-						<!--/.hm-foot-para-->
-						<div class="hm-foot-icon">
-							<ul>
-								<li><a href="https://github.com/yasser31"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-								<!--/li-->
-								<!--/li-->
-								<li><a href="https://www.linkedin.com/in/yasser-friha"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-								<!--/li-->
-								<li><a href="https://twitter.com/Yasser_Friha"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-								<!--/li-->
-							</ul>
-							<!--/ul-->
-						</div>
-						<!--/.hm-foot-icon-->
-					</div>
-					<!--/.hm-footer-widget-->
-				</div>
 				<!--/.col-->
 				<div class=" col-md-2 col-sm-6 col-xs-12">
 					<div class="hm-footer-widget">
@@ -560,7 +520,6 @@
 						">
 					<ul>
 						<li><a href="#">legal</a></li>
-						<li><a href="#">sitemap</a></li>
 						<li><a href="#">privacy policy</a></li>
 					</ul>
 				</div><!-- /.foot-menu-->
